# llmfinetune-agent

./: .gitignore  README.md  execution_plan.md  main.py  pyproject.toml  requirements.txt  setup.py
configs/: default_config.json
data/: train.json  validation.json
llmfinetune_agent/: __init__.py  agents_runner.py  config.py  data.py  trainer.py
llmfinetune_agent/agents/: curator_utils.py  data_generator.py  debugger.py  evaluator.py  knowledge_retrieval.py  orchestrator.py  trainer_agent.py  trainer_utils.py  utils.py
tests/: test_config.py  test_evaluator.py  test_framework.py
